kinda fixed the blurry css with transform

--- a/app/styles/modules/modal.scss
+++ b/app/styles/modules/modal.scss
@@ -21,14 +21,16 @@
     transition: all 0.3s ease;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) translateZ(0) scale(1.0, 1.0);
     z-index: 99;
     visibility: hidden;
     backface-visibility: hidden;
+    filter: blur(0);
     padding: 16px;
     letter-spacing: 0.25px;
     transition: box-shadow 0.1s ease;
     max-height: 90vh;
+    outline: 1px solid transparent;
 
     .modal-box__content {
         color: $color-light;
